# beacon

./: .clang-format  .gitignore  .travis.yml  README.md  bc.code-workspace  changelog.md
beacon/src/: .gitignore  .settings.el  CMakeLists.txt  Doxyfile  big_enum.rb  clean.rb  cppcheck_err.text  cppcheck_out.text  function_rename.rb  gcov.rb  include_sort.rb  lcov.rb  makefile  manual.md  packager.rb  struct_rename.rb  style_change.rb  symbol_rename.rb
beacon/src/auto/: cmake.rb  doxy.rb  filecom.rb  lcov.rb  macros.rb  symboles.rb  test.rb
beacon/src/beacon/: CMakeLists.txt  cl.c  cl.h  config.h  debug.c  debug.h  error.c  error.h  main.c  test.c  test.h
beacon/src/beacon/ast/: CMakeLists.txt  access_level.c  access_level.h  assign_operator_type.h  ast.c  ast.h  ast_new_decl.c  ast_new_decl.h  ast_new_factor.c  ast_new_factor.h  ast_new_literal.c  ast_new_literal.h  ast_new_operator.c  ast_new_operator.h  ast_new_stmt.c  ast_new_stmt.h  ast_util.h  constructor_chain_type.h  modifier_type.c  modifier_type.h  operator_type.c  operator_type.h
beacon/src/beacon/env/: CMakeLists.txt  access_domain.c  access_domain.h  class_loader.c  class_loader.h  class_loader_ilload_impl.c  class_loader_ilload_impl.h  class_loader_sgload_helper.c  class_loader_sgload_helper.h  class_loader_sgload_impl.c  class_loader_sgload_impl.h  class_state.h  compile_context.c  compile_context.h  constructor.c  constructor.h  content_type.h  coroutine.h  exception.c  exception.h  field.c  field.h  fqcn_cache.c  fqcn_cache.h  generic_cache.c  generic_cache.h  generic_type.c  generic_type.h  heap.c  heap.h  import_info.c  import_info.h  import_manager.c  import_manager.h  joint_type.h  lambda_scope.c  lambda_scope.h  lazy_resolve.c  lazy_resolve.h  link_type.h  (+41 more)
beacon/src/beacon/env/cll/: CMakeLists.txt  class_loader_bcload_helper.c  class_loader_bcload_impl.c  class_loader_bcload_impl.h  class_loader_bcload_import_module_impl.c  class_loader_bcload_import_module_impl.h  class_loader_bcload_link_module_impl.c  class_loader_bcload_link_module_impl.h  class_loader_bcload_member_module_impl.c  class_loader_bcload_member_module_impl.h  class_loader_ilload_factor_module_impl.c  class_loader_ilload_factor_module_impl.h  class_loader_ilload_impl.c  class_loader_ilload_impl.h  class_loader_ilload_member_module_impl.c  class_loader_ilload_member_module_impl.h  class_loader_ilload_module_impl.c  class_loader_ilload_module_impl.h  class_loader_ilload_stmt_module_impl.c  class_loader_ilload_stmt_module_impl.h  class_loader_ilload_type_module_impl.c  class_loader_ilload_type_module_impl.h  class_loader_link_impl.c  class_loader_link_impl.h  class_loader_sgload_helper.c  class_loader_sgload_helper.h  class_loader_sgload_impl.c  class_loader_sgload_impl.h  load_flow.md
beacon/src/beacon/env/resolve/: default_eqoperator_resolve.c  default_eqoperator_resolve.h  default_noteqoperator_resolve.c  default_noteqoperator_resolve.h  default_operator_resolve.c  default_operator_resolve.h
beacon/src/beacon/env/type/: CMakeLists.txt  class_find.c  class_find.h  class_impl.c  class_impl.h  class_validate.c  class_validate.h  interface_impl.c  interface_impl.h  interface_valid.c  meta_impl.c  (+5 more)
beacon/src/beacon/il/: CMakeLists.txt  call_context.c  call_context.h  call_frame.c  call_frame.h  control_structure.c  control_structure.h  il_argument.c  il_argument.h  il_constructor.c  il_constructor.h  il_constructor_chain.c  il_constructor_chain.h  il_context.c  il_context.h  il_error.c  il_error.h  il_factor_impl.h  il_factor_interface.c  il_factor_interface.h  il_field.c  il_field.h  il_function.c  il_function.h  il_import.c  il_import.h  il_load_cache.h  il_method.c  il_method.h  il_namespace.c  il_namespace.h  il_operator_fixtype.h  il_operator_overload.c  il_operator_overload.h  il_parameter.c  il_parameter.h  il_print_layout.c  il_print_layout.h  il_property.c  il_property.h  (+15 more)
beacon/src/beacon/lib/: CMakeLists.txt  bc_library_impl.h  bc_library_interface.h  sg_library_interface.h
beacon/src/beacon/parse/: CMakeLists.txt  beacon.l  beacon.output  beacon.tab.c  beacon.tab.h  beacon.y  lex.makeconfig  lex.yy.c  parser.c  parser.h  signal.l  signal.output  signal.tab.c  signal.tab.h  signal.y  yacc_input_type.h
beacon/src/beacon/pcode/: cell.c  cell.h  pcode.c  pcode.h  symbol_impl.h  symbol_interface.c  symbol_interface.h
beacon/src/beacon/shared/: CMakeLists.txt
beacon/src/beacon/thread/: CMakeLists.txt  native_thread.c  native_thread.h  thread.c  thread.h
beacon/src/beacon/util/: CMakeLists.txt  alias.h  bench_mark.h  cache.c  cache.h  cmd.h  error.h  file_entry.c  file_entry.h  file_path.h  getopt.c  getopt.h  io.c  io.h  list.h  logger.c  logger.h  macro.h  mem.c  mem.h  numeric_map.c  numeric_map.h  panic.c  panic.h  pool.h  props.h  stack.c  stack.h  storage.c  storage.h  string_buffer.c  string_buffer.h  string_pool.c  string_pool.h  system.c  system.h  text.c  text.h  tree_map.c  tree_map.h  (+4 more)
beacon/src/beacon/vm/: CMakeLists.txt  defer_context.c  defer_context.h  enviroment.c  enviroment.h  eval.c  eval.h  frame.c  frame.h  generate.c  generate.h  label.c  label.h  lazy_int.c  lazy_int.h  line_range.c  line_range.h  opcode.c  opcode.h  opcode_buf.c  opcode_buf.h  script_thread.c  script_thread.h  symbol_entry.c  symbol_entry.h  symbol_table.c  symbol_table.h  vm.c  vm.h  vm_trace.c  vm_trace.h  yield_context.c  yield_context.h
beacon/src/gcov/: .gitignore
beacon/src/signal/: main.c  test.h
beacon/src/signal/ast/: ast_new_decl.h  ast_new_operator.h
beacon/src/signal/env/: class_loader.c  class_loader.h  class_loader_ilload_impl.c  class_loader_sgload_impl.h  constructor.h  field.c  generic_cache.c  import_manager.c  native_method.h  native_method_ref.h  type_parameter_rule.c
beacon/src/signal/il/: il_ehandler.c  il_field.h  il_function.h  il_namespace.c  il_operator_fixtype.h  il_parameter.h  il_print_layout.h
beacon/src/signal/lib/: sg_library_impl.h
beacon/src/signal/parse/: signal.tab.c
beacon/src/signal/util/: io.h  list.h  logger.c  text.h
beacon/src/signal/vm/: opcode.c  symbol_table.h
(+990 files in other folders)
