add_library("lib__beacon_il_stmt" STATIC
    "il_stmt_variable_decl_impl.c"
    "il_stmt_proc_impl.c"
    "il_stmt_if_impl.c"
    "il_stmt_continue_impl.c"
    "il_stmt_assert_impl.c"
    "il_stmt_yield_return_impl.c"
    "il_stmt_variable_init_impl.c"
    "il_stmt_break_impl.c"
    "il_stmt_inject_jni_impl.c"
    "il_stmt_inferenced_type_init_impl.c"
    "il_stmt_return_impl.c"
    "il_stmt_return_empty_impl.c"
    "il_stmt_yield_break_impl.c"
    "il_stmt_throw_impl.c"
    "il_stmt_while_impl.c"
    "il_stmt_try_impl.c"
    "il_stmt_defer_impl.c"
)
